@@ -1,3 +1,8 @@
+2004-08-31 Hasso Tepper <hasso at quagga.net>
+
+	* main.c, rt_netlink.c: Added -s command line switch for tuning
+	  netlink receive buffer size in Linux to avoid buffer overruns.
+
 2004-08-26  Miles Nordin  <carton@Ivy.NET>
 
 	* ipforward_sysctl.c (mib_ipv6): Use size_t for len, per
